tests/ui/parser/removed-syntax/removed-syntax-mode.rs
fn f(+x: isize) {}
//~^ ERROR expected parameter name, found `+`

fn main() {}
